优化计算方式